[package]
name = "ddns"
version = "0.1.0"
authors = ["skohan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "0.9.0"
futures = "0.3"

